Fixed GamesArrayAdapter, now works

--- a/app/src/main/res/layout/pick3_listview.xml
+++ b/app/src/main/res/layout/pick3_listview.xml
@@ -60,9 +60,9 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
+        android:id="@+id/tvBall2"
+        android:layout_alignBaseline="@+id/tvBall2"
+        android:layout_alignBottom="@+id/tvBall2"
         android:layout_alignRight="@+id/ivBall3"
         android:layout_alignEnd="@+id/ivBall3"
         android:layout_marginRight="23dp"
@@ -86,9 +86,9 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignBottom="@+id/textView4"
+        android:id="@+id/tvBall2"
+        android:layout_alignBaseline="@+id/tvBall1"
+        android:layout_alignBottom="@+id/tvBall1"
         android:layout_alignRight="@+id/tvTime"
         android:layout_alignEnd="@+id/tvTime"
         android:layout_marginRight="10dp"
@@ -98,7 +98,7 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4"
+        android:id="@+id/tvBall1"
         android:layout_marginTop="21dp"
         android:layout_marginRight="11dp"
         android:layout_marginEnd="11dp"
