--- a/app/src/main/res/layout/pick4_listview.xml
+++ b/app/src/main/res/layout/pick4_listview.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="43dp"
         android:layout_marginEnd="43dp"
-        android:id="@+id/textView3"
+        android:id="@+id/tvDate"
         android:layout_alignBaseline="@+id/tvTime"
         android:layout_alignBottom="@+id/tvTime"
         android:layout_alignParentRight="true"
@@ -74,9 +74,9 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignBottom="@+id/textView4"
+        android:id="@+id/tvBall2"
+        android:layout_alignBaseline="@+id/tvBall1"
+        android:layout_alignBottom="@+id/tvBall1"
         android:layout_alignRight="@+id/tvTime"
         android:layout_alignEnd="@+id/tvTime"
         android:layout_marginRight="10dp"
@@ -86,7 +86,7 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4"
+        android:id="@+id/tvBall1"
         android:layout_marginTop="21dp"
         android:layout_marginRight="11dp"
         android:layout_marginEnd="11dp"
@@ -98,11 +98,11 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7"
+        android:id="@+id/tvBall3"
         android:layout_marginRight="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignBaseline="@+id/tvBall2"
+        android:layout_alignBottom="@+id/tvBall2"
         android:layout_alignRight="@+id/imageView4"
         android:layout_alignEnd="@+id/imageView4"/>
 
@@ -119,11 +119,11 @@
         android:text="$"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
+        android:id="@+id/tvBall4"
         android:layout_marginRight="23dp"
         android:layout_marginEnd="23dp"
-        android:layout_alignBaseline="@+id/textView7"
-        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignBaseline="@+id/tvBall3"
+        android:layout_alignBottom="@+id/tvBall3"
         android:layout_alignRight="@+id/ivBall3"
         android:layout_alignEnd="@+id/ivBall3"/>
 
