HTTP requests now use Volley. AllGamesActivity now has swipe down to refresh.

--- a/app/src/main/res/layout/content_all_games.xml
+++ b/app/src/main/res/layout/content_all_games.xml
@@ -14,12 +14,20 @@
     tools:context="us.brandonandrews.nclottery.MainActivity"
     tools:showIn="@layout/activity_all_games">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:id="@+id/lvGames"
         />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
         style="?android:attr/progressBarStyle"
