--- a/app/src/main/res/layout/activity_all_games.xml
+++ b/app/src/main/res/layout/activity_all_games.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="us.brandonandrews.nclottery.AllGames">
+    tools:context="us.brandonandrews.nclottery.AllGamesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
