--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,19 +14,10 @@
     tools:context="us.brandonandrews.nclottery.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <ListView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:id="@+id/lvGames"
-        />
+        android:id="@+id/main_activity_fragment_placeholder">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:id="@+id/progressBarMainScreen"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_width="80dp"
-        android:layout_height="80dp"/>
+    </FrameLayout>
 </RelativeLayout>
