--- a/app/src/main/res/layout/pick3_listview.xml
+++ b/app/src/main/res/layout/pick3_listview.xml
@@ -106,4 +106,26 @@
         android:layout_alignRight="@+id/ivBall3"
         android:layout_alignEnd="@+id/ivBall3" />
 
+    <SurfaceView
+        android:id="@+id/surfaceView"
+        android:background="@android:color/holo_green_light"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_width="40dp"
+        android:layout_alignBottom="@+id/tvBall3"
+        android:layout_toRightOf="@+id/ivBall3"
+        android:layout_toEndOf="@+id/ivBall3"
+        android:layout_height="35dp" />
+
+    <TextView
+        android:text="$"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvSumItUp"
+        android:layout_above="@+id/tvBall3"
+        android:layout_alignRight="@+id/surfaceView"
+        android:layout_alignEnd="@+id/surfaceView"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp" />
+
 </RelativeLayout>
