--- a/app/src/main/res/layout/pick4_listview.xml
+++ b/app/src/main/res/layout/pick4_listview.xml
@@ -17,9 +17,9 @@
         android:text="*Time*"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvGame"
-        android:layout_toRightOf="@+id/tvGame"
-        android:layout_toEndOf="@+id/tvGame"
+        android:layout_alignTop="@+id/tvGameName"
+        android:layout_toRightOf="@+id/tvGameName"
+        android:layout_toEndOf="@+id/tvGameName"
         android:layout_marginLeft="14dp"
         android:layout_marginStart="14dp"
         android:id="@+id/tvTime"/>
@@ -52,9 +52,9 @@
         android:layout_marginTop="13dp"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_below="@+id/tvGame"
-        android:layout_alignLeft="@+id/tvGame"
-        android:layout_alignStart="@+id/tvGame"/>
+        android:layout_below="@+id/tvGameName"
+        android:layout_alignLeft="@+id/tvGameName"
+        android:layout_alignStart="@+id/tvGameName"/>
 
     <TextView
         android:text="Pick4"
@@ -63,7 +63,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="11dp"
-        android:id="@+id/tvGame"
+        android:id="@+id/tvGameName"
         android:textStyle="normal|bold"
         android:textSize="18sp"
         android:layout_alignParentTop="true"
@@ -91,8 +91,8 @@
         android:layout_marginRight="11dp"
         android:layout_marginEnd="11dp"
         android:layout_alignTop="@+id/ivBall1"
-        android:layout_alignRight="@+id/tvGame"
-        android:layout_alignEnd="@+id/tvGame"/>
+        android:layout_alignRight="@+id/tvGameName"
+        android:layout_alignEnd="@+id/tvGameName"/>
 
     <TextView
         android:text="$"
