--- a/app/src/main/res/layout/fragment_all_games.xml
+++ b/app/src/main/res/layout/fragment_all_games.xml
@@ -28,4 +28,13 @@
         android:layout_centerVertical="true"
         android:layout_width="80dp"
         android:layout_height="80dp"/>
+
+    <TextView
+        android:id="@+id/tvNoGames"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Select games to display from settings menu"
+        android:visibility="invisible" />
 </RelativeLayout>
