--- a/app/src/main/res/layout/pick4_listview.xml
+++ b/app/src/main/res/layout/pick4_listview.xml
@@ -1,150 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="25dp">
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignTop="@+id/ivBall2"
-        android:layout_toEndOf="@+id/ivBall2"
-        android:layout_toRightOf="@+id/ivBall2"
-        app:srcCompat="@drawable/ball" />
+        android:layout_marginLeft="12dp"
+        app:layout_constraintLeft_toRightOf="@+id/ivBall1"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="50dp" />
 
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvGameName"
-        android:layout_marginLeft="14dp"
         android:layout_marginStart="14dp"
-        android:layout_toEndOf="@+id/tvGameName"
-        android:layout_toRightOf="@+id/tvGameName"
-        android:text="*Time*" />
+        android:text="*Time*"
+        app:layout_constraintLeft_toRightOf="@+id/tvGameName"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tvTime"
-        android:layout_alignBottom="@+id/tvTime"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
         android:text="*Date*"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
 
     <ImageView
         android:id="@+id/ivBall2"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignTop="@+id/ivBall1"
-        android:layout_toEndOf="@+id/ivBall1"
-        android:layout_toRightOf="@+id/ivBall1"
-        app:srcCompat="@drawable/ball" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="50dp" />
 
     <ImageView
         android:id="@+id/ivBall1"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignLeft="@+id/tvGameName"
-        android:layout_alignStart="@+id/tvGameName"
-        android:layout_below="@+id/tvGameName"
-        android:layout_marginTop="13dp"
-        app:srcCompat="@drawable/ball" />
+        android:layout_marginLeft="12dp"
+        app:layout_constraintLeft_toRightOf="@+id/ivBall2"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="50dp" />
 
     <TextView
         android:id="@+id/tvGameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="11dp"
         android:text="Pick4"
         android:textSize="18sp"
-        android:textStyle="normal|bold" />
-
-    <TextView
-        android:id="@+id/tvBall2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tvBall1"
-        android:layout_alignBottom="@+id/tvBall1"
-        android:layout_alignEnd="@+id/tvTime"
-        android:layout_alignRight="@+id/tvTime"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:text="$" />
-
-    <TextView
-        android:id="@+id/tvBall1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/tvGameName"
-        android:layout_alignRight="@+id/tvGameName"
-        android:layout_alignTop="@+id/ivBall1"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
-        android:layout_marginTop="21dp"
-        android:text="$" />
+        android:textStyle="normal|bold"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/tvBall3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tvBall2"
-        android:layout_alignBottom="@+id/tvBall2"
-        android:layout_alignEnd="@+id/imageView4"
-        android:layout_alignRight="@+id/imageView4"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView4"
+        app:layout_constraintRight_toRightOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="0.518" />
+
+    <TextView
+        android:id="@+id/tvBall1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$"
+        app:layout_constraintTop_toTopOf="@+id/ivBall2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivBall2"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.518"
+        app:layout_constraintRight_toRightOf="@+id/ivBall2"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/ivBall2" />
 
     <ImageView
         android:id="@+id/ivBall3"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignTop="@+id/imageView4"
-        android:layout_toEndOf="@+id/imageView4"
-        android:layout_toRightOf="@+id/imageView4"
-        app:srcCompat="@drawable/ball" />
+        android:layout_marginLeft="12dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="50dp" />
 
     <TextView
         android:id="@+id/tvBall4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tvBall3"
-        android:layout_alignBottom="@+id/tvBall3"
-        android:layout_alignEnd="@+id/ivBall3"
-        android:layout_alignRight="@+id/ivBall3"
-        android:layout_marginEnd="23dp"
-        android:layout_marginRight="23dp"
-        android:text="$" />
+        android:text="$"
+        app:layout_constraintTop_toTopOf="@+id/ivBall3"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivBall3"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.518"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/ivBall3"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/ivBall3" />
 
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="40dp"
         android:layout_height="35dp"
-        android:layout_alignBottom="@+id/tvBall4"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@+id/ivBall3"
-        android:layout_toRightOf="@+id/ivBall3"
-        android:background="@android:color/holo_green_light" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/holo_green_light"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintLeft_toRightOf="@+id/ivBall3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline" />
 
     <TextView
-        android:id="@+id/tvSumItUp"
+        android:id="@+id/tvSum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tvBall4"
-        android:layout_toLeftOf="@+id/tvDate"
-        android:layout_toStartOf="@+id/tvDate"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/surfaceView"
+        app:layout_constraintLeft_toLeftOf="@+id/surfaceView"
+        app:layout_constraintRight_toRightOf="@+id/surfaceView"
+        app:layout_constraintTop_toTopOf="@+id/surfaceView"
+        app:layout_constraintVertical_bias="1.0" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvBall2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/ivBall1"
+        app:layout_constraintLeft_toLeftOf="@+id/ivBall1"
+        app:layout_constraintRight_toRightOf="@+id/ivBall1"
+        app:layout_constraintTop_toTopOf="@+id/ivBall1"
+        app:layout_constraintVertical_bias="0.518" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="49dp"
+        android:orientation="horizontal" />
+
+</android.support.constraint.ConstraintLayout>
