--- a/app/src/main/res/layout/fragment_all_games.xml
+++ b/app/src/main/res/layout/fragment_all_games.xml
@@ -12,11 +12,10 @@
         android:layout_height="match_parent">
 
         <ListView
+            android:id="@+id/lvGames"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:id="@+id/lvGames"
-            />
+            android:layout_alignParentTop="true" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
